Code nearly complete. Unable to load questions

--- a/end.html
+++ b/end.html
@@ -9,27 +9,27 @@
   </head>
   <body>
     <div class="container">
-      <div id="end" class="flex-center flex-column">
-        <h1 id="finalScore"></h1>
-        <form>
-          <input
-            type="text"
-            name="username"
-            id="username"
-            placeholder="username"
-          />
-          <button
-            type="submit"           
-            class="btn"
-            id="saveScoreBtn"
-            onclick="saveHighScore(event)"
-            disabled
-          >
-            Save
-          </button>
-        </form>
-        <a class="btn" href="/game.html">Play Again</a>
-        <a class="btn" href="/">Go Home</a>
+      <div class="row" id="end" class="fixed">
+          <h1 class="flex-center position-center" id="finalScore">All Done!</h1>
+          <form class="">
+            <input
+              type="text"
+              name="username"
+              id="username"
+              placeholder="username"
+            />
+            <button
+              type="submit"           
+              class="btn"
+              id="saveScoreBtn"
+              onclick="saveHighScore(event)"
+            >
+              Submit
+            </button>
+          </form>
+          <a class="btn btn-outline-primary" href="game.html">Play Again</a>
+          <a class="btn btn-outline-success" href="index.html">Go Home</a>
+        </div>
       </div>
     </div>
     <script src="end.js"></script>
