--- a/highscores.html
+++ b/highscores.html
@@ -5,16 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>High Scores</title>
-    <link rel="stylesheet" href="game.css" />
     <link rel="stylesheet" href="highscores.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
-  <body>
+  <body style="text-align: center;">
     <div class="container">
-      <div id="highScores" class="flex-center flex-column">
+      <div id="highScores">
         <h1 id="finalScore">High Scores</h1>
-        <ul id="highScoresList"></ul>
-        <a class="btn" href="/">Go Home</a>
+        <ol id="highScoresList" style="list-style-position:inside"></ol>
+        <a class="btn btn-outline-primary" href="index.html">Go Home</a>
       </div>
     </div>
     <script src="highscores.js"></script>
