--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Quick Quiz - Play</title>
+    <title>Coding Quiz Challenge</title>
     <link rel="stylesheet" href="game.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
@@ -13,41 +13,38 @@
       <div id="game" class="justify-center flex-column hidden">
         <div id="hud">
           <div id="hud-item">
-            <p id="progressText" class="hud-prefix">
-              Question
+            <p class="hud-prefix">
+              Coding Quiz Challenge
             </p>
           </div>
           <div id="hud-item">
             <p class="hud-prefix">
-              Score
+              Timer
             </p>
             <h1 class="hud-main-text" id="score">
               0
             </h1>
           </div>
         </div>
-        <h2 id="questions"></h2>
+        <h2 id="question"></h2>
         <div class="choice-container">
-          <p class="choice-prefix">A</p>
+          <p class="choice-prefix">1</p>
           <p class="choice-text" data-number="1"></p>
         </div>
         <div class="choice-container">
-          <p class="choice-prefix">B</p>
+          <p class="choice-prefix">2</p>
           <p class="choice-text" data-number="2"></p>
         </div>
         <div class="choice-container">
-          <p class="choice-prefix">C</p>
+          <p class="choice-prefix">3</p>
           <p class="choice-text" data-number="3"></p>
         </div>
         <div class="choice-container">
-          <p class="choice-prefix">D</p>
+          <p class="choice-prefix">4</p>
           <p class="choice-text" data-number="4"></p>
         </div>
       </div>
     </div>
-    <script src="game.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script>src="game.js"</script>
   </body>
 </html>
