Added game instructions

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
       <div id="startscreen" class="start">
         <h1>Coding Quiz Challenge</h1>
         <p>
-          Text to explain quiz rules
+          Prepare to learn some of the greatest insights to coding a human mind has access to.<br>
+          You will lose 10 seconds of time for an incorrect answer and your parents will be disappointed. <br>
+          Good Luck!
         </p>
         <button id="startbtn">Start Quiz</button>
       </div>
